-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.0 Beta1
-
None
-
bacb04d77 (dev), eb6784eb8 (6.6), d55c5e2a4 (dev), 5ab4764f1 (6.6)
It looks like rcc requires openssl if "-openssl-linked" is used during the build. But since we have a separate CMAKE_PREFIX_PATH for openssl it cannot find it.
Is openssl really required for RCC?
macOS
15:18:58 FAILED: qttools/src/linguist/lprodump/.rcc/qrc_proparser.cpp /[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/.rcc/qrc_proparser.cpp 15:18:58 cd /[...]/build/b/src/qt-build/qttools/src/linguist/lprodump && /[...]/build/b/src/qt-build/qtbase/libexec/rcc --output /[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/.rcc/qrc_proparser.cpp --name proparser /[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/.rcc/proparser.qrc --no-zstd 15:18:58 dyld[51996]: Library not loaded: libssl.3.dylib 15:18:58 Referenced from: <627DEB43-5CE7-3B80-A0EB-DFB014C4C5E6> /[...]/build/b/src/qt-build/qtbase/lib/QtCore.framework/Versions/A/QtCore 15:18:58 Reason: tried: 'libssl.3.dylib' (no such file), '/System/Volumes/Preboot/Cryptexes/OSlibssl.3.dylib' (no such file), 'libssl.3.dylib' (no such file), '/usr/local/lib/libssl.3.dylib' (no such file), '/usr/lib/libssl.3.dylib' (no such file, not in dyld cache), '/[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/libssl.3.dylib' (no such file), '/System/Volumes/Preboot/Cryptexes/OS/[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/libssl.3.dylib' (no such file), '/[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/libssl.3.dylib' (no such file), '/usr/local/lib/libssl.3.dylib' (no such file), '/usr/lib/libssl.3.dylib' (no such file, not in dyld cache) 15:18:58 /bin/sh: line 1: 51996 Abort trap: 6 /[...]/build/b/src/qt-build/qtbase/libexec/rcc --output /[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/.rcc/qrc_proparser.cpp --name proparser /[...]/build/b/src/qt-build/qttools/src/linguist/lprodump/.rcc/proparser.qrc --no-zstd
Windows
15:21:48 [1225/5503] Running rcc for resource qpdf 15:21:48 FAILED: qtbase/src/gui/.rcc/qrc_qpdf.cpp C:/[...]/qtbase/src/gui/.rcc/qrc_qpdf.cpp 15:21:48 cmd.exe /C "cd /D C:\J\workspace\default_RLW64M\build\b\src\qt-build\qtbase\src\gui && C:\J\workspace\default_RLW64M\build\b\src\qt-build\qtbase\bin\rcc.exe --output C:/[...]/qtbase/src/gui/.rcc/qrc_qpdf.cpp --name qpdf C:/[...]/qtbase/src/gui/.rcc/qpdf.qrc --no-zstd" 15:21:48 [1226/5503] Building CXX object qtbase\src\tools\windeployqt\CMakeFiles\windeployqt.dir\elfreader.cpp.obj 15:21:48 [1227/5503] Running rcc for resource gui_shaders 15:21:48 FAILED: qtbase/src/gui/.rcc/qrc_gui_shaders.cpp C:/[...]/qtbase/src/gui/.rcc/qrc_gui_shaders.cpp 15:21:48 cmd.exe /C "cd /D C:\J\workspace\default_RLW64M\build\b\src\qt-build\qtbase\src\gui && C:\J\workspace\default_RLW64M\build\b\src\qt-build\qtbase\bin\rcc.exe --output C:/[...]/qtbase/src/gui/.rcc/qrc_gui_shaders.cpp --name gui_shaders C:/[...]/qtbase/src/gui/.rcc/gui_shaders.qrc --no-zstd"